# OCS

./: README.md  pyproject.toml  skill.md
opencode_session/: api_client.py  api_domain.py  api_profile.py  api_profile_detection.py  api_routes.py  api_transport.py  blocker_formatting.py  blocker_inventory.py  blocker_services.py  blocking_execution.py  blocking_timeout.py  capabilities.py  cli.py  cli_policy.py  diagnostics.py  disposable_session_lifecycle.py  domain_helpers.py  event_watcher.py  events.py  formatting.py  multi_worker_execution_outcome.py  multi_worker_orchestration.py  multi_worker_orchestration_contracts.py  multi_worker_orchestration_persistence.py  multi_worker_orchestration_phases.py  project_metadata.py  project_metadata_cleanup.py  project_metadata_formatting.py  project_routes.py  prompt_admission.py  records.py  remote_journal.py  run_branch_transaction.py  run_cleanup.py  run_cleanup_audit.py  run_cleanup_local.py  run_cleanup_preflight.py  run_cleanup_projects.py  run_formatting.py  run_persistence.py  (+59 more)
tests/: mocked_cli_harness.py  multi_worker_orchestration_helpers.py  orchestration_cli_harness.py  remote_journal_helpers.py  single_worker_run_state_helpers.py  test_api_client.py  test_architecture_quality.py  test_blocking_execution_service.py  test_cli_policy.py  test_disposable_validation_harness.py  test_domain_helpers.py  test_event_watcher.py  test_import_boundaries.py  test_mocked_cli_harness.py  test_ocs_ux_contract.py  test_opencode_session_admission.py  test_opencode_session_blockers.py  test_opencode_session_capabilities.py  (+51 more)
(+32 files in other folders)
